Moved tax calculation to a function and added display of net yield.

--- a/orecalc.html
+++ b/orecalc.html
@@ -5,7 +5,7 @@
 <title>EVE Online Ore Calculator</title>
 <link rel="stylesheet" type="text/css" href="global.css" />
 <script type="text/javascript" src="items.js"></script>
-<script type="text/javascript" src="orecalc.js"></script>
+<script type="text/javascript" src="orecalc.big.js"></script>
 </head>
 <body onLoad="recalculate()">
 <div id="container">
@@ -192,7 +192,7 @@
     </form>
     <hr />
     <h1>Ores</h1>
-    <h2 id="estimated-efficiency">Estimated Base Refining Efficiency: 100%</h2>
+    <h2 id="efficiency">Base/Net Refining Efficiency: 100% / 100%</h2>
     <table id="ores" class="sortable">
     	<thead>
 	        <tr><td><noscript>JavaScript must be enabled to use this tool.</noscript></td></tr>
