Re-wrote ore data structure, fixing #4

--- a/orecalc.html
+++ b/orecalc.html
@@ -130,7 +130,7 @@
 				<p><label for="vivid-hemorphite-price"><br />Vivid Hemorphite</label><br /><input type="text" id="vivid-hemorphite-price" /></p>
 				<p><label for="vitric-hedbergite-price">Vitric Hedbergite</label><br /><input type="text" id="vitric-hedbergite-price" /></p>
 				<p><label for="iridescent-gneiss-price">Iridescent Gneiss</label><br /><input type="text" id="iridescent-gneiss-price" /></p>
-				<p><label for="onyx-dark-ochre-price">Onyx Ochre</label><br /><input type="text" id="onyx-dark-ochre-price" /></p>
+				<p><label for="onyx-ochre-price">Onyx Ochre</label><br /><input type="text" id="onyx-ochre-price" /></p>
 				<p><label for="sharp-crokite-price">Sharp Crokite</label><br /><input type="text" id="sharp-crokite-price" /></p>
 				<p><label for="bright-spodumain-price">Bright Spodumain</label><br /><input type="text" id="bright-spodumain-price" /></p>
 				<p><label for="triclinic-bistot-price">Triclinic Bistot</label><br /><input type="text" id="triclinic-bistot-price" /></p>
@@ -148,7 +148,7 @@
 				<p><label for="radiant-hemorphite-price">Radiant Hemorphite</label><br /><input type="text" id="radiant-hemorphite-price" /></p>
 				<p><label for="glazed-hedbergite-price"><br />Glazed Hedbergite</label><br /><input type="text" id="glazed-hedbergite-price" /></p>
 				<p><label for="prismatic-gneiss-price"><br />Prismatic Gneiss</label><br /><input type="text" id="prismatic-gneiss-price" /></p>
-				<p><label for="obsidian-dark-ochre-price"><br />Obsidian Ochre</label><br /><input type="text" id="obsidian-dark-ochre-price" /></p>
+				<p><label for="obsidian-ochre-price"><br />Obsidian Ochre</label><br /><input type="text" id="obsidian-ochre-price" /></p>
 				<p><label for="crystalline-crokite-price"><br />Crystalline Crokite</label><br /><input type="text" id="crystalline-crokite-price" /></p>
 				<p><label for="gleaming-spodumain-price">Gleaming Spodumain</label><br /><input type="text" id="gleaming-spodumain-price" /></p>
 				<p><label for="monoclinic-bistot-price"><br />Monoclinic Bistot</label><br /><input type="text" id="monoclinic-bistot-price" /></p>
