Reference minified JS file, not the big one.

--- a/orecalc.html
+++ b/orecalc.html
@@ -5,7 +5,7 @@
 <title>EVE Online Ore Calculator</title>
 <link rel="stylesheet" type="text/css" href="global.css" />
 <script type="text/javascript" src="items.js"></script>
-<script type="text/javascript" src="orecalc.big.js"></script>
+<script type="text/javascript" src="orecalc.js"></script>
 </head>
 <body onLoad="recalculate()">
 <div id="container">
